--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "babel-runtime": "^6.26.0",
     "nth-check": "^2.0.1",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
@@ -14,6 +15,7 @@
     "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
+    "typescript": "^4.5.5",
     "v2": "0.0.3",
     "web-vitals": "^2.1.4"
   },
