--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "babel-runtime": "^6.26.0",
+    "ajv": "^8.9.0",
+    "babel-runtime": "^5.3.3",
     "nth-check": "^2.0.1",
-    "postcss": "^8.4.5",
+    "postcss": "^8.2.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
