--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-dom": "^17.0.2",
     "react-icon": "^1.0.0",
     "react-icons": "^4.3.1",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^3.0.1",
     "typescript": "^4.5.5",
     "v2": "0.0.3",
     "web-vitals": "^2.1.4"
